--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <li>Vollyball</li>
     </ul>
     <hr>
-    <h3><a href="Contactme.html">Contact Me</a></h3>
+    <h3><a href="contactme.html">Contact Me</a></h3>
 
 </body>
 
