--- a/contactme.html
+++ b/contactme.html
@@ -19,7 +19,7 @@
             Linkdn: Soon...
         </li>
     </ul>
-    <form action="/index.html" method="get">
+    <form action="index.html" method="get">
         <label for="name">Enter Your Name:</label>
         <input type="text"><br>
         <label for="email">Enter Your Email:</label>
